Added more tests, fixed lots of things
Signed-off-by: jasperpotts <jasperpotts@users.noreply.github.com>